Fix hidden description on mobile

--- a/src/components/CardDetails/CardDetails.sass
+++ b/src/components/CardDetails/CardDetails.sass
@@ -29,5 +29,5 @@
 
   &.show-full-description
     .description
-      max-height: 1000px
+      max-height: 10000px
       transition: max-height 0.5s ease
